[workspace]

exclude = [
	"projects/privacy",
	"projects/unsorted",
	"projects/users",
]

members = [
	"projects/clang",
	"projects/closures",
	"projects/communicator",
	"projects/datetime",
	"projects/endow",
	"projects/find_word",
	"projects/generics",
	"projects/guessing_game",
	"projects/hashing",
	"projects/hash",
	"projects/iterators",
	"projects/jsonrpsee_pubsub",
	"projects/languages",
	"projects/lifetimes",
	"projects/shapes",
	"projects/sharding",
	"projects/traits",
	"projects/traits_fly",
	"projects/traits_shapes",
]
