# Cargo configuration file

[package] # Metadata about the package

# Build Script (for Native Dependencies)
# (see http://doc.crates.io/build-script.html)
# links manifest key declares name of the native library that is
# being linked to such that the package links to the 'libctest'
# native library and it has a build script for locating and building
# the library.

links = "clang"
build = "build.rs"

# Library name
name = "clang"
version = "0.0.2"
authors = [ "Luke Schoen <ltfschoen@gmail.com>" ]
edition = '2021'

[[bin]] # Informs Cargo we want a binary executable build outcome

# Binary executable name (differs from Library)
name = "clang"

# Crates (aka packages) of Rust code to download and compile
[dependencies]

#[build-dependencies.gcc]
#git = "https://github.com/alexcrichton/gcc-rs"

# Alternative with local gcc dependency installation requires that the directory containing gcc is in the PATH environment variable.
# https://crates.io/crates/cc
[build-dependencies]
cc = "1.0"
