[package]
name = "hash"
version = "0.1.0"
authors = ["Luke Schoen <ltfschoen@gmail.com>"]
edition = "2021"

[dependencies]
bytes = { version = "0.4.11" }
ethcore-bytes = { version = "0.1.1" }
ethereum-types = { version = "0.14.1" }
hex = { version = "0.4.3", default-features = false }
keccak-hash = { version = "0.10.0" }
