[package]
name = "jsonrpsee_pubsub"
version = "0.1.0"
authors = ["Luke Schoen <ltfschoen@gmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
futures = "0.3"
jsonrpsee = { version = "0.20.0", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"
